--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   font-family: 'Lalezar', cursive;
  }
 
- h2, p, ul {
+ h1, h2, p, ul {
    margin: 0;
    padding: 0;
  }
@@ -37,11 +37,19 @@
  * ================== */
 main {
   max-width: 600px;
+  margin: 0 auto;
 }
 
-h1 {
-  margin-top: 30px;
+header {
   text-align: center;
+  margin-bottom: 30px;
+}
+header h1 {
+  margin-top: 30px;
+  line-height: 1;
+}
+header p {
+  color: #999;
 }
 
 .card__body {
@@ -154,4 +162,5 @@ h1 {
 }
 .card__action .icon {
   font-size: 1.5em;
+  cursor: pointer;
 }
